[package]
name = "tg-sys"
version = "0.1.1"
edition = "2021"
build = "build.rs"
license = "MIT"
description = "unsafe low-level bindings to the `tg` geometry library"
repository = "https://github.com/jcdyer/tg-sys"
readme = "README.md"
links = "tg"
keywords = ["geometry", "math"]
categories = ["external-ffi-bindings", "graphics", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.150"

[features]
default = ["atomics"]
atomics = []

[build-dependencies]
cc = "1.0.83"
